# pong

./: Cargo.toml  LICENSE  README.md
resources/: display_config.ron
resources/texture/: pong_spritesheet.ron
src/: main.rs  rt.rs  utils.rs
src/game/: audio.rs  camera.rs  components.rs  graphics.rs  mod.rs  sprites.rs
src/game/components/: gameplay.rs  mod.rs  ui.rs  utils.rs
src/game/systems/: ball.rs  mod.rs  paddle.rs
