[package]
name = "pong"
version = "0.1.0"
authors = []

[dependencies]
amethyst = "0.9"
rand = "0.5"
cute-log = "1"

[dependencies.lazy-panic]
version = "0.3"
features = ["backtrace-on"]

[dependencies.log]
version = "0"
default-features = false
features = ["max_level_warn", "release_max_level_warn"]

[profile.dev]
opt-level = 2
